--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             </div>
             <div class="row img_menu">
                 <div class="bentley">
-                    <img id="car_img" src="CarsImages/bentley/Bentley Continental.jpg" alt="Bentley Continental">
+                    <img id="car_img" src="CarsImages/bentley/BentleyContinental.jpg" alt="Bentley Continental">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -397,7 +397,7 @@
                     </div>
                 </div>
                 <div class="w-motor">
-                    <img id="car_img" src="CarsImages/w-motor/Fenyr Super Sport.jpg" alt="Fenyr Super Sport">
+                    <img id="car_img" src="CarsImages/w-motor/FenyrSuperSport.jpg" alt="Fenyr Super Sport">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -411,7 +411,7 @@
                     </div>
                 </div>
                 <div class="ferrari">
-                    <img id="car_img" src="CarsImages/ferrari/Ferrari Roma.jpg" alt="Ferrari Roma">
+                    <img id="car_img" src="CarsImages/ferrari/FerrariRoma.jpg" alt="Ferrari Roma">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -425,7 +425,7 @@
                     </div>
                 </div>
                 <div class="rollsroyce">
-                    <img id="car_img" src="CarsImages/rollsroyce/Rollsroyce Wraith.jpg" alt="rollsroyce-wraith">
+                    <img id="car_img" src="CarsImages/rollsroyce/RollsroyceWraith.jpg" alt="rollsroyce-wraith">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -439,7 +439,7 @@
                     </div>
                 </div>
                 <div class="rollsroyce">
-                    <img id="car_img" src="CarsImages/rollsroyce/Rollsroyce Ghost.jpg" alt="Rollsroyce Ghost">
+                    <img id="car_img" src="CarsImages/rollsroyce/RollsroyceGhost.jpg" alt="Rollsroyce Ghost">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -453,7 +453,7 @@
                     </div>
                 </div>
                 <div class="rollsroyce">
-                    <img id="car_img" src="CarsImages/rollsroyce/Rollsroyce Phantom VIII.jpg" alt="Rollsroyce Phantom VIII">
+                    <img id="car_img" src="CarsImages/rollsroyce/RollsroycePhantomVIII.jpg" alt="Rollsroyce Phantom VIII">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -467,7 +467,7 @@
                     </div>
                 </div>
                 <div class="bentley">
-                    <img id="car_img" src="CarsImages/bentley/Bentley Mulsanne.jpg" alt="Bentley Mulsanne">
+                    <img id="car_img" src="CarsImages/bentley/BentleyMulsanne.jpg" alt="Bentley Mulsanne">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -481,7 +481,7 @@
                     </div>
                 </div>
                 <div class="bentley">
-                    <img id="car_img" src="CarsImages/bentley/Bentley Flying Spur.jpg" alt="Bentley Flying Spur">
+                    <img id="car_img" src="CarsImages/bentley/BentleyFlyingSpur.jpg" alt="Bentley Flying Spur">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -495,7 +495,7 @@
                     </div>
                 </div>
                 <div class="w-motor">
-                    <img id="car_img" src="CarsImages/w-motor/Lykan Hyper Sport.jpg" alt="Lykan Hyper Sport">
+                    <img id="car_img" src="CarsImages/w-motor/LykanHyperSport.jpg" alt="Lykan Hyper Sport">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -509,7 +509,7 @@
                     </div>
                 </div>
                 <div class="ferrari">
-                    <img id="car_img" src="CarsImages/ferrari/Ferrari Portofino.jpg" alt="Ferrari Portofino">
+                    <img id="car_img" src="CarsImages/ferrari/FerrariPortofino.jpg" alt="Ferrari Portofino">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -523,7 +523,7 @@
                     </div>
                 </div>
                 <div class="ferrari">
-                    <img id="car_img" src="CarsImages/ferrari/Ferrari California T.jpg" alt="Ferrari California T">
+                    <img id="car_img" src="CarsImages/ferrari/FerrariCaliforniaT.jpg" alt="Ferrari California T">
                     <div id="popup">
                         <i class="fas fa-search-plus"></i>
                     </div>
@@ -655,7 +655,7 @@
 
                 <div>
                     <div class="row">
-                        <img src="Carsimages/bentley/Bentley Continental.jpg" alt="icon">
+                        <img src="Carsimages/bentley/BentleyContinental.jpg" alt="icon">
                         <div>
                             <h4>New Bentley coming up !!!</h4>
                             <i class="far fa-calendar-alt"></i>
@@ -663,7 +663,7 @@
                         </div>
                     </div>
                     <div  class="row">
-                        <img src="Carsimages/w-motor/Fenyr Super Sport.jpg" alt="icon">
+                        <img src="Carsimages/w-motor/FenyrSuperSport.jpg" alt="icon">
                         <div>
                             <h4>Limited car from Dubai</h4>
                             <i class="far fa-calendar-alt"></i>
@@ -671,7 +671,7 @@
                         </div>
                     </div>
                     <div  class="row">
-                        <img src="Carsimages/ferrari/Ferrari Portofino.jpg" alt="icon">
+                        <img src="Carsimages/ferrari/FerrariPortofino.jpg" alt="icon">
                         <div>
                             <h4>Old Ferrari now has new apperance !!!</h4>
                             <i class="far fa-calendar-alt"></i>
